--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:label="@string/coroutines_label" />
         <activity android:name="com.thoughtworks.ark.sample.designsystem.colorsystem.ui.ComposeColorSystemActivity" />
         <activity android:name="com.thoughtworks.ark.sample.designsystem.colorsystem.ui.XmlColorSystemActivity" />
-        <activity android:name="com.thoughtworks.ark.sample.storage.StorageActivity" />
+        <activity android:name="com.thoughtworks.ark.sample.storage.ui.StorageActivity" />
 
         <activity android:name=".feeds.ui.FeedActivity" />
         <activity android:name=".permission.ui.PermissionActivity" />
